--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,12 @@
 <resources>
     <string name="app_name">DoDaily</string>
     <string name="todo1">TODO!</string>
-    
+
     <!-- Navigation -->
     <string name="nav_habits">Habits</string>
     <string name="nav_mood">Mood</string>
     <string name="nav_settings">Settings</string>
-    
+
     <!-- Habits -->
     <string name="habits_title">Daily Habits</string>
     <string name="habits_progress">Today\'s Progress: %1$d/%2$d habits completed (%3$d%%)</string>
@@ -19,7 +19,7 @@
     <string name="habit_emoji">Emoji</string>
     <string name="habit_increment">Add +1</string>
     <string name="habit_completed">Completed</string>
-    
+
     <!-- Mood Journal -->
     <string name="mood_title">Mood Journal</string>
     <string name="mood_subtitle">Track your daily emotions and feelings</string>
@@ -31,7 +31,7 @@
     <string name="mood_neutral">Neutral</string>
     <string name="mood_happy">Happy</string>
     <string name="mood_very_happy">Very Happy</string>
-    
+
     <!-- Settings -->
     <string name="settings_title">Settings</string>
     <string name="settings_welcome">Welcome, %1$s!</string>
@@ -39,17 +39,36 @@
     <string name="hydration_description">Get reminded to drink water at regular intervals</string>
     <string name="enable_reminders">Enable Reminders</string>
     <string name="reminder_interval">Reminder Interval</string>
+    
+    <!-- Settings Sections -->
+    <string name="profile_section">PROFILE</string>
+    <string name="preferences_section">PREFERENCES</string>
+    <string name="advanced_section">ADVANCED</string>
+    
+    <!-- Settings Items -->
+    <string name="profile">Profile</string>
+    <string name="profile_description">View and edit your profile</string>
+    <string name="theme">Theme</string>
+    <string name="theme_description">Customize the app\'s appearance</string>
+    <string name="notifications">Notifications</string>
+    <string name="notifications_description">Manage notifications and reminders</string>
+    <string name="language">Language</string>
+    <string name="language_description">Set your preferred language</string>
+    <string name="data_privacy">Data &amp; Privacy</string>
+    <string name="data_privacy_description">Manage your data and privacy settings</string>
+    <string name="help_support">Help &amp; Support</string>
+    <string name="help_support_description">Get help and support</string>
     <string name="data_management">Data Management</string>
     <string name="data_description">Manage your app data and settings</string>
     <string name="clear_all_data">Clear All Data</string>
     <string name="about_title">About</string>
     <string name="about_description">Learn more about DoDaily app</string>
     <string name="about_dodaily">About DoDaily</string>
-    
+
     <!-- Notifications -->
     <string name="hydration_notification_title">💧 Time to Hydrate!</string>
     <string name="hydration_notification_text">Don\'t forget to drink some water. Stay hydrated! 💧</string>
-    
+
     <!-- Common -->
     <string name="save">Save</string>
     <string name="cancel">Cancel</string>
@@ -59,5 +78,5 @@
     <string name="ok">OK</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
-    
+
 </resources>
